tests/baselines/reference/ArrowFunctionExpression1.errors.txt
==== tests/cases/compiler/ArrowFunctionExpression1.ts (1 errors) ====
    var v = (public x: string) => { };
             ~~~~~~
!!! ArrowFunctionExpression1.ts(1,10): error TS2246: A parameter property is only allowed in a constructor implementation.